--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
@@ -5,17 +5,27 @@ http_interactions:
     uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
       encoding: US-ASCII
-      string: ! "<?xml version='1.0'?>\n      <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
-        xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
-        \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
-        \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
-        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
-        \        </Author>\n      </Authors>\n      <DocumentCategory>Journal Document</DocumentCategory>\n
-        \     <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
-        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
+      string: |-
+        <?xml version='1.0'?>
+              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
+                <Authors>
+                  <Author>
+                    <LastName>edler</LastName>
+                    <FirstName>alice</FirstName>
+                    <MiddleName></MiddleName>
+                    <City>Stanford</City>
+                    <State>CA</State>
+                    <Country>USA</Country>
+                    <Version>1</Version>
+                 </Author>
+              </Authors>
+              <DocumentCategory>Journal Document</DocumentCategory>
+              <Emails>
+                          <string>alice.edler@stanford.edu</string>
+                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
     headers:
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Licenseid:
@@ -51,7 +61,7 @@ http_interactions:
       - '875'
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29352378</PublicationItemID>\r\n
         \   <MatchScore>1.2708333730697632</MatchScore>\r\n  </ItemMatchResult>\r\n
@@ -68,17 +78,27 @@ http_interactions:
     uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
     body:
       encoding: US-ASCII
-      string: ! "<?xml version='1.0'?>\n      <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
-        xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
-        \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
-        \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
-        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
-        \        </Author>\n      </Authors>\n      <DocumentCategory>Conference Proceeding
-        Document</DocumentCategory>\n      <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
-        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
+      string: |-
+        <?xml version='1.0'?>
+              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
+                <Authors>
+                  <Author>
+                    <LastName>edler</LastName>
+                    <FirstName>alice</FirstName>
+                    <MiddleName></MiddleName>
+                    <City>Stanford</City>
+                    <State>CA</State>
+                    <Country>USA</Country>
+                    <Version>1</Version>
+                 </Author>
+              </Authors>
+              <DocumentCategory>Conference Proceeding Document</DocumentCategory>
+              <Emails>
+                          <string>alice.edler@stanford.edu</string>
+                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
     headers:
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Licenseid:
@@ -114,10 +134,154 @@ http_interactions:
       - '349'
     body:
       encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>10389828</PublicationItemID>\r\n
         \   <MatchScore>0.34762454032897949</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
   recorded_at: Mon, 15 Jun 2015 21:53:06 GMT
+- request:
+    method: post
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
+    body:
+      encoding: UTF-8
+      string: |-
+        <?xml version='1.0'?>
+              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
+                <Authors>
+                  <Author>
+                    <LastName>edler</LastName>
+                    <FirstName>alice</FirstName>
+                    <MiddleName></MiddleName>
+                    <City>Stanford</City>
+                    <State>CA</State>
+                    <Country>USA</Country>
+                    <Version>1</Version>
+                 </Author>
+              </Authors>
+              <DocumentCategory>Journal Document</DocumentCategory>
+              <Emails>
+                          <string>alice.edler@stanford.edu</string>
+                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Mon, 29 Jun 2015 15:58:38 GMT
+      Content-Length:
+      - '875'
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
+        \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29352378</PublicationItemID>\r\n
+        \   <MatchScore>1.2708333730697632</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>2</MatchRank>\r\n    <PublicationItemID>29187981</PublicationItemID>\r\n
+        \   <MatchScore>0.99072802066802979</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>3</MatchRank>\r\n    <PublicationItemID>46795732</PublicationItemID>\r\n
+        \   <MatchScore>0.51769149303436279</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>4</MatchRank>\r\n    <PublicationItemID>47593787</PublicationItemID>\r\n
+        \   <MatchScore>0.4968426525592804</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+    http_version: 
+  recorded_at: Mon, 29 Jun 2015 15:58:39 GMT
+- request:
+    method: post
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
+    body:
+      encoding: UTF-8
+      string: |-
+        <?xml version='1.0'?>
+              <PublicationAuthorMatchParameters xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' xmlns:xsd='http://www.w3.org/2001/XMLSchema'>
+                <Authors>
+                  <Author>
+                    <LastName>edler</LastName>
+                    <FirstName>alice</FirstName>
+                    <MiddleName></MiddleName>
+                    <City>Stanford</City>
+                    <State>CA</State>
+                    <Country>USA</Country>
+                    <Version>1</Version>
+                 </Author>
+              </Authors>
+              <DocumentCategory>Conference Proceeding Document</DocumentCategory>
+              <Emails>
+                          <string>alice.edler@stanford.edu</string>
+                        </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Mon, 29 Jun 2015 15:58:39 GMT
+      Content-Length:
+      - '349'
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
+        \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>10389828</PublicationItemID>\r\n
+        \   <MatchScore>0.34773862361907959</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+    http_version: 
+  recorded_at: Mon, 29 Jun 2015 15:58:39 GMT
 recorded_with: VCR 2.5.0
