--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ config/database.yml
 config/cap_auth.yaml
 config/sciencewire_auth.yaml
 .ruby-*
+
+## Specific to SublimeText:
+*.sublime-project
+*.sublime-workspace
+
